--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Sign-up</title>
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="pic"></div>
+        <div class="info">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </div>
 </body>
 
 </html>
