--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/medievalsharp" type="text/css" />
     <title>Sign-up</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="pic"></div>
+        <div class="pic">
+            <div class="logo">
+                I am a disco dancer. Hue hue. Khi Khi
+            </div>
+        </div>
         <div class="info">
             <div class="card"></div>
             <div class="card"></div>
