Reduce Letter spacing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/neocyr" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/cursive" type="text/css"/> 
     <title>Sign-up</title>
 </head>
 
@@ -17,7 +17,10 @@
                 <div class="logo-box">
                     <img src="./Img/odin-lined.png" alt="Odin-Logo">
                 </div>
-                ODIN
+                <div>ODIN</div>
+            </div>
+            <div class="footer-text">
+                <p>Photo by amuka on samuka</p>
             </div>
         </div>
         <div class="info">
