Add content to top card

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
             </div>
         </div>
         <div class="info">
-            <div class="card"></div>
+            <div class="card">
+                <div class="text">
+                    <p>This is not a real online service! You know you need something like this in your life
+                        to realize your deepest dreams.<br>Sign up <span>now</span> to get started.
+                    </p>
+                    <p>You <span>know</span> you want to.</p>
+                </div>
+            </div>
             <div class="card"></div>
             <div class="card"></div>
         </div>
