Add lowest card content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/cursive" type="text/css"/> 
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/cursive" type="text/css" />
     <title>Sign-up</title>
 </head>
 
@@ -33,7 +33,10 @@
                 </div>
             </div>
             <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <button type="submit">Create Account</button>
+                <p class="card-text">Already have an account? <a href="http://www.google.com">Log in</a></p> 
+            </div>
         </div>
     </div>
 </body>
