Add form layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="info">
-            <div class="card">
+            <div class="card upper">
                 <div class="text">
                     <p>This is not a real online service! You know you need something like this in your life
                         to realize your deepest dreams.<br>Sign up <span>now</span> to get started.
@@ -32,10 +32,40 @@
                     <p>You <span>know</span> you want to.</p>
                 </div>
             </div>
-            <div class="card"></div>
-            <div class="card">
+            <div class="card mid">
+                <h5>Let's do this!</h5>
+                <div class="form">
+                    <form action="" method="get" class="sign-up-form">
+                        <div class="form-row">
+                            <label for="first-name">FIRST NAME</label><br>
+                            <input type="text" name="first-name" id="first-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="last-name">LAST NAME</label><br>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="last-name">LAST NAME</label><br>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="last-name">LAST NAME</label><br>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="last-name">LAST NAME</label><br>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="last-name">LAST NAME</label><br>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="card lower">
                 <button type="submit">Create Account</button>
-                <p class="card-text">Already have an account? <a href="http://www.google.com">Log in</a></p> 
+                <p class="card-text">Already have an account? <a href="http://www.google.com">Log in</a></p>
             </div>
         </div>
     </div>
