Add appropriate meta-data to input

--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
                             <input type="text" name="last-name" id="last-name">
                         </div>
                         <div class="form-row">
-                            <label for="last-name">LAST NAME</label><br>
-                            <input type="text" name="last-name" id="last-name">
+                            <label for="e-mail">EMAIL</label><br>
+                            <input type="email" name="mail" id="e-mail">
                         </div>
                         <div class="form-row">
-                            <label for="last-name">LAST NAME</label><br>
-                            <input type="text" name="last-name" id="last-name">
+                            <label for="phone-number">PHONE NUMBER</label><br>
+                            <input type="tel" name="phone" id="phone-number">
                         </div>
                         <div class="form-row">
-                            <label for="last-name">LAST NAME</label><br>
-                            <input type="text" name="last-name" id="last-name">
+                            <label for="pswd">PASSWORD</label><br>
+                            <input type="password" name="password" id="pswd">
                         </div>
                         <div class="form-row">
-                            <label for="last-name">LAST NAME</label><br>
-                            <input type="text" name="last-name" id="last-name">
+                            <label for="pswd-cnofirm">CONFIRM PASSWORD</label><br>
+                            <input type="password" name="password-repeat" id="pswd-cnofirm">
                         </div>
                     </form>
                 </div>
