Add photo credit & resize .form div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <div>ODIN</div>
             </div>
             <div class="footer-text">
-                <p>Photo by amuka on samuka</p>
+                <p>Photo by <a href="https://unsplash.com/@david_bxl">David</a> on <a
+                        href="https://unsplash.com/">Unsplash</a></p>
             </div>
         </div>
         <div class="info">
